Bug 718279: Allow disabling coloring of collapsed threads according to the tags on replies in that thread. f=mkmelin, r=neil, a=mkmelin